# Rural-flow-ai

./: README.md  package-lock.json  package.json  pyproject.toml  setup-env.sh  start-emulators.bat  theme.json
client/: .env  .env.local
client/src/components/dashboard/: AIAssistant.tsx  Sidebar.tsx  SmartIrrigationPanel.tsx  StatusCard.tsx  TopBar.tsx
client/src/pages/: Dashboard.tsx
dataconnect/: dataconnect.yaml
server/: routes.ts
server/services/: apiService.ts
src/: App.tsx  index.tsx
src/components/: ErrorBoundary.tsx
src/contexts/: AuthContext.tsx
